# dsopbuilder

./: .gitignore  Dockerfile  LICENSE  README.md  appsettings.py  gpg-key-gen.sh  install-all.sh  main.py  pyproject.toml  requirements.txt  test.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/containerscan/: allowedlist.yaml
.github/workflows/: docker-build.yml
bigbang-helpers/base/: bigbang-dev-cert.yaml.default.template  bigbang-dev-cert.yaml.template
bigbang-helpers/dev/: configmap.yaml
command/: dsop_aks.py  dsop_bigbang.py  dsop_rke2.py  settings.py
config/: config-aks.json  config-bigbang.json  config-rke2.json  config.json
tests/: test_io.py  test_streams.py  test_util.py
util/: bb_streams.py  io.py  k8s_streams.py  streams.py  strings.py
